--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -69,55 +69,90 @@
             </ul>
         </nav>
     </aside>
-
-    
     <main class="flex-1 p-10">
         <h1 class="text-2xl font-bold">Bem Vindo</h1>
         <h3 class="text-lg font-bold">Acesse as nossas funcionalidades</h3>
 
-         <div class="flex flex-wrap">
-            <div class="w-1/3 p-4">
-                <a href="cartao_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Cartao</a>
+        <div class="mt-8">
+            <h2 class="text-xl font-semibold mb-4">Cartões</h2>
+            <div class="flex flex-wrap">
+                <div class="w-1/2 p-4">
+                    <a href="cartao_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Cartao</a>
+                </div>
+                <div class="w-1/2 p-4">
+                    <a href="cartao_busca.html" class="block bg-blue-900 text-white p-4 rounded text-center">Buscar Cartao</a>
+                </div>
             </div>
-            <div class="w-1/3 p-4">
-                <a href="cartao_busca.html" class="block bg-blue-900 text-white p-4 rounded text-center">Buscar Cartao</a>
+        </div>
+
+        <div class="mt-8">
+            <h2 class="text-xl font-semibold mb-4">Clientes</h2>
+            <div class="flex flex-wrap">
+                <div class="w-1/2 p-4">
+                    <a href="cliente_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Cliente</a>
+                </div>
+                <div class="w-1/2 p-4">
+                    <a href="cliente_busca.html" class="block bg-blue-900 text-white p-4 rounded text-center">Buscar Cliente</a>
+                </div>
             </div>
-            <div class="w-1/3 p-4">
-                <a href="cliente_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Cliente</a>
+        </div>
+
+        <div class="mt-8">
+            <h2 class="text-xl font-semibold mb-4">Funcionários</h2>
+            <div class="flex flex-wrap">
+                <div class="w-1/2 p-4">
+                    <a href="funcionario_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Funcionario</a>
+                </div>
+                <div class="w-1/2 p-4">
+                    <a href="funcionario_busca.html" class="block bg-blue-900 text-white p-4 rounded text-center">Buscar Funcionario</a>
+                </div>
             </div>
-            <div class="w-1/3 p-4">
-                <a href="cliente_busca.html" class="block bg-blue-900 text-white p-4 rounded text-center">Buscar Cliente</a>
+        </div>
+
+        <div class="mt-8">
+            <h2 class="text-xl font-semibold mb-4">Agências</h2>
+            <div class="flex flex-wrap">
+                <div class="w-1/2 p-4">
+                    <a href="agencia_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Agencia</a>
+                </div>
+                <div class="w-1/2 p-4">
+                    <a href="agencia_busca.html" class="block bg-blue-900 text-white p-4 rounded text-center">Buscar Agencia</a>
+                </div>
             </div>
-            <div class="w-1/3 p-4">
-                <a href="funcionario_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Funcionario</a>
+        </div>
+
+        <div class="mt-8">
+            <h2 class="text-xl font-semibold mb-4">Contas</h2>
+            <div class="flex flex-wrap">
+                <div class="w-1/2 p-4">
+                    <a href="conta_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Conta</a>
+                </div>
+                <div class="w-1/2 p-4">
+                    <a href="conta_busca.html" class="block bg-blue-900 text-white p-4 rounded text-center">Buscar Conta</a>
+                </div>
             </div>
-            <div class="w-1/3 p-4">
-                <a href="funcionario_busca.html" class="block bg-blue-900 text-white p-4 rounded text-center">Buscar Funcionario</a>
+        </div>
+
+        <div class="mt-8">
+            <h2 class="text-xl font-semibold mb-4">Empréstimos</h2>
+            <div class="flex flex-wrap">
+                <div class="w-1/2 p-4">
+                    <a href="emprestimo_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Emprestimo</a>
+                </div>
+                <div class="w-1/2 p-4">
+                    <a href="emprestimo_busca.html" class="block bg-blue-900 text-white p-4 rounded text-center">Buscar Emprestimo</a>
+                </div>
             </div>
-            <div class="w-1/3 p-4">
-                <a href="agencia_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Agencia</a>
+        </div>
+
+        <div class="mt-8">
+            <h2 class="text-xl font-semibold mb-4">Transações</h2>
+            <div class="flex flex-wrap">
+                <div class="w-1/2 p-4">
+                    <a href="transacao_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Transacao</a>
+                </div>
             </div>
-            <div class="w-1/3 p-4">
-                <a href="agencia_busca.html" class="block bg-blue-900 text-white p-4 rounded text-center">Buscar Agencia</a>
-            </div>
-            <div class="w-1/3 p-4">
-                <a href="conta_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Conta</a>
-            </div>
-            <div class="w-1/3 p-4">
-                <a href="conta_busca.html" class="block bg-blue-900
-                    text-white p-4 rounded text-center">Buscar Conta</a>
-            </div>
-            <div class="w-1/3 p-4">
-                <a href="emprestimo_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Emprestimo</a>
-            </div>
-            <div class="w-1/3 p-4">
-                <a href="emprestimo_busca.html" class="block bg-blue-900 text-white p-4 rounded text-center">Buscar Emprestimo</a>
-            </div>
-            <div class="w-1/3 p-4">
-                <a href="transacao_cadastro.html" class="block bg-blue-900 text-white p-4 rounded text-center">Cadastrar Transacao</a>
-            </div>
-         </div>
-        
+        </div>
     </main>
 
     <script src="../js/funcionario.js"></script>
