--- a/src/main/resources/templates/pages/agencia_cadastro.html
+++ b/src/main/resources/templates/pages/agencia_cadastro.html
@@ -35,6 +35,10 @@
                 <label class="block font-semibold">Endereço</label>
                 <input type="text" id="endereco" class="w-full p-2 border rounded">
             </div>
+            <div>
+                <label class="block font-semibold">Telefone</label>
+                <input type="text" id="telefone" class="w-full p-2 border rounded">
+            </div>
             <button type="submit" class="bg-blue-900 text-white px-4 py-2 rounded">Cadastrar</button>
         </form>
     </main>
