--- a/src/main/resources/templates/pages/cliente_busca.html
+++ b/src/main/resources/templates/pages/cliente_busca.html
@@ -26,7 +26,7 @@
         <h1 class="text-2xl font-bold">Buscar Cliente</h1>
         <div class="mt-6">
             <label class="block font-semibold">CPF</label>
-            <input type="text" id="buscarCpf" class="w-full p-2 border rounded">
+            <input type="text" id="buscarCPF" class="w-full p-2 border rounded">
             <button onclick="buscarCliente()" class="bg-blue-900 text-white px-4 py-2 mt-2 rounded">Buscar</button>
         </div>
         <div id="resultadoBusca" class="mt-4"></div>
