--- a/src/main/resources/templates/pages/cliente_cadastro.html
+++ b/src/main/resources/templates/pages/cliente_cadastro.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastrar Cliente</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-gray-100 flex">
 
-    
+
     <aside class="w-80 bg-blue-900 text-white min-h-screen p-5">
         <h1 class="text-3xl font-bold text-center">Banco</h1>
         <hr class="my-4 border-white">
@@ -21,13 +23,20 @@
         </nav>
     </aside>
 
-    
+
     <main class="flex-1 p-10">
         <h1 class="text-2xl font-bold">Cadastrar Cliente</h1>
         <form id="formCliente" class="mt-6 space-y-4">
             <div>
                 <label class="block font-semibold">Nome</label>
                 <input type="text" id="nome" class="w-full p-2 border rounded">
+            </div>
+            <div>
+                <label class="block font-semibold">Sexo</label>
+                <select type="text" id="sexo" class="w-full p-2 border rounded">
+                    <option value="M">Masculino</option>
+                    <option value="F">Feminino</option>X'
+                </select>
             </div>
             <div>
                 <label class="block font-semibold">CPF</label>
@@ -37,10 +46,31 @@
                 <label class="block font-semibold">Endereço</label>
                 <input type="text" id="endereco" class="w-full p-2 border rounded">
             </div>
+            <div>
+                <label class="block font-semibold">Email</label>
+                <input type="email" id="email" class="w-full p-2 border rounded">
+            </div>
+            <div>
+                <label class="block font-semibold">Telefone</label>
+                <input type="text" id="telefone" class="w-full p-2 border rounded">
+            </div>
+            <div>
+                <label class="block font-semibold">Data de Nascimento</label>
+                <input type="date" id="dataNascimento" class="w-full p-2 border rounded">
+            </div>
+            <div>
+                <label class="block font-semibold">Login</label>
+                <input type="text" id="login" class="w-full p-2 border rounded">
+            </div>
+            <div>
+                <label class="block font-semibold">Senha</label>
+                <input type="password" id="senha" class="w-full p-2 border rounded">
+            </div>
             <button type="submit" class="bg-blue-900 text-white px-4 py-2 rounded">Cadastrar</button>
         </form>
     </main>
 
     <script src="../js/cliente.js"></script>
 </body>
+
 </html>
