--- a/src/main/resources/templates/pages/cartao_busca.html
+++ b/src/main/resources/templates/pages/cartao_busca.html
@@ -25,8 +25,8 @@
     <main class="flex-1 p-10">
         <h1 class="text-2xl font-bold">Buscar Cartao</h1>
         <div class="mt-6">
-            <label class="block font-semibold">Nome Cartao</label>
-            <input type="text" id="buscarCartao" class="w-full p-2 border rounded">
+            <label class="block font-semibold">Id Conta Cartao</label>
+            <input type="text" id="buscarIdConta" class="w-full p-2 border rounded">
             <button onclick="buscarCartao()" class="bg-blue-900 text-white px-4 py-2 mt-2 rounded">Buscar</button>
         </div>
         <div id="resultadoBusca" class="mt-4"></div>
