--- a/src/main/resources/templates/pages/cliente_cadastro.html
+++ b/src/main/resources/templates/pages/cliente_cadastro.html
@@ -19,6 +19,7 @@
             <ul class="ml-4">
                 <li><a href="cliente_cadastro.html" class="block py-2 hover:underline">Cadastrar</a></li>
                 <li><a href="cliente_busca.html" class="block py-2 hover:underline">Buscar</a></li>
+                <li><a href="cliente_busca.html" class="block py-2 hover:underline">Editar ou Excluir</a></li>
             </ul>
         </nav>
     </aside>
@@ -43,9 +44,9 @@
                 <input type="text" id="cpf" class="w-full p-2 border rounded">
             </div>
             <div>
-                <label class="block font-semibold">Endereço</label>
                 <input type="text" id="endereco" class="w-full p-2 border rounded">
             </div>
+                <label class="block font-semibold">Endereço</label>
             <div>
                 <label class="block font-semibold">Email</label>
                 <input type="email" id="email" class="w-full p-2 border rounded">
