--- a/src/main/resources/templates/pages/cliente_cadastro.html
+++ b/src/main/resources/templates/pages/cliente_cadastro.html
@@ -19,6 +19,7 @@
             <ul class="ml-4">
                 <li><a href="cliente_cadastro.html" class="block py-2 hover:underline">Cadastrar</a></li>
                 <li><a href="cliente_busca.html" class="block py-2 hover:underline">Buscar</a></li>
+                <li><a href="cliente_listar.html" class="block py-2 hover:underline">Listar</a></li>
             </ul>
         </nav>
     </aside>
