--- a/src/main/resources/templates/pages/cliente_relatorio.html
+++ b/src/main/resources/templates/pages/cliente_relatorio.html
@@ -18,7 +18,8 @@
             <ul class="ml-4">
                 <li><a href="cliente_cadastro.html" class="block py-2 hover:underline">Cadastrar</a></li>
                 <li><a href="cliente_busca.html" class="block py-2 hover:underline">Buscar</a></li>
-                <li><a href="cliente_relatorio.html" class="block py-2 hover:underline">Relatórios</a></li>
+                <li><a href="cliente_listar.html" class="block py-2 hover:underline">Listar</a></li>
+                <li><a href="cliente_relatorio.html" class="block py-2 hover:underline">Relatorios</a></li>
             </ul>
         </nav>
     </aside>
