--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscar Cartao</title>
+    <title>Home Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 flex">
@@ -70,7 +70,7 @@
         </nav>
     </aside>
     <main class="flex-1 p-10">
-        <h1 class="text-2xl font-bold">Bem Vindo</h1>
+        <h1 class="text-2xl font-bold">Bem Vindo Sr(A) Ruan</h1>
         <h3 class="text-lg font-bold">Acesse as nossas funcionalidades</h3>
 
         <div class="mt-8">
